# OS

./: CMakeLists.txt
2/: Main_2.cpp
3/: Main_3.cpp
4/: Main_4.cpp
5/: Main_5.cpp
6/: Main_6.cpp  result.txt
7/: Main_7.cpp
8/: Main_8.cpp
