cmake_minimum_required(VERSION 3.29)
project(OS)

set(CMAKE_CXX_STANDARD 20)

add_executable(OS
        1/Main_1.cpp
        1/Main_1.h
        2/Main_2.cpp
        2/Main_2.h
        3/Main_3.cpp
        3/Main_3.h
        4/Main_4.cpp
        4/Main_4.h
        5/Main_5.cpp
        5/Main_5.h
        6/Main_6.cpp
        6/Main_6.h
)
